resources/image-builder/production/image-builder-worker.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: image-builder-worker
  name: image-builder-worker-route
spec:
  host: jdtctdnzh7wn6j7.api.openshift.com
  port:
    targetPort: worker-api
  to:
    kind: Service
    name: image-builder-worker
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
